--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "pg": "^8.11.5",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.75.0"
+    "sass": "^1.75.0",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
